--- a/index.html
+++ b/index.html
@@ -69,12 +69,53 @@
             </dt>
             <dd>
               <p>Nossos horários de atendimento são...</p>
+              <ol>
+                <li>
+                  <strong>Descrição 1 (simples e direta):</strong>
+                  Nossa equipe está disponível para atendimento de segunda a sexta, das 9h às 18h, e aos sábados das 10h às 14h.
+                </li>
+                <li>
+                  <strong>Descrição 2 (com detalhe extra):</strong>
+                  Atendemos presencialmente e por telefone de segunda a sexta, das 9h às 18h. Aos sábados, nosso atendimento é apenas
+                  online, das 10h às 14h.
+                </li>
+                <li>
+                  <strong>Descrição 3 (focando suporte online):</strong>
+                  Nossa central de atendimento online funciona todos os dias, das 8h às 20h, garantindo respostas rápidas às suas
+                  dúvidas.
+                </li>
+                <li>
+                  <strong>Descrição 4 (resumida para mobile/FAQ):</strong>
+                  Seg–Sex: 9h–18h | Sáb: 10h–14h | Atendimento online disponível 7 dias por semana.
+                </li>
+              </ol>
             </dd>
             <dt>
               <h1><button class="perg-03" contenteditable="">Posso rastrear a minha encomenda?</button></h1>
             </dt>
             <dd>
-              <p>Sim, você pode rastrear sua encomenda através do nosso sistema de rastreamento online...</p>
+              <ol>
+                <li>
+                  <strong>Descrição 1 (simples):</strong>
+                  Sim! Assim que a sua encomenda for enviada, você receberá um e-mail com o número de rastreio para acompanhar o
+                  progresso da entrega em tempo real.
+                </li>
+                <li>
+                  <strong>Descrição 2 (com detalhe):</strong>
+                  Após a confirmação de envio, enviamos um código de rastreio pelo e-mail cadastrado. Com ele, você pode acompanhar
+                  cada etapa da sua encomenda diretamente no site da transportadora.
+                </li>
+                <li>
+                  <strong>Descrição 3 (destacando facilidade):</strong>
+                  Rastrear sua encomenda é rápido e fácil! Basta usar o número de rastreio que enviamos por e-mail para ver onde seu
+                  pedido está a qualquer momento.
+                </li>
+                <li>
+                  <strong>Descrição 4 (resumido para mobile/FAQ):</strong>
+                  Enviamos um código de rastreio por e-mail assim que a encomenda sai do armazém. Você pode acompanhar a entrega
+                  diretamente no site da transportadora.
+                </li>
+              </ol>
             </dd>
           </dl>
         </div>
